# Graph

./: CMakeLists.txt
include/: ImGuiExtra.hpp
include/Graph/: Config.hpp  ImGuiExtra.hpp  Path.hpp  Utils.hpp
include/Graph/Objects/: Edge.hpp  Node.hpp  ObjectManager.hpp
include/Objects/: Edge.hpp  Node.hpp  Object.hpp  ObjectManager.hpp
resources/shaders/: background.frag
src/: ImGuiExtra.cpp  ImmersiveDarkMode.cpp  Main.cpp  Path.cpp  Test.cpp  Utils.cpp
src/Objects/: Edge.cpp  Node.cpp  Object.cpp  ObjectManager.cpp
